--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,4 +1,12 @@
 .carousel {
-    border-radius: 55px 55px 55px 55px !important;
+    border-radius: 10px !important;
     overflow: hidden !important;
+}
+
+.center{
+    text-align: center !important;
+}
+
+table.table-bordered th,table.table-bordered td{
+    border: 1px solid black;
 }
